<resources>
    <string name="app_name" translatable="false">모두의 움짤</string>

    <!--errors-->
    <string name="err_permission_denied">기능 사용을 위해 권한이 필요합니다</string>
    <string name="err_not_found_video_title">비디오 로딩 실패</string>
    <string name="err_not_found_video_text">비디오를 찾을 수 없습니다. 다시 확인 해 주세요.</string>
    <string name="err_intent_return_null">data == null</string>
    <string name="err_dont_saving_gif_title">생성 실패</string>
    <string name="err_dont_saving_gif_content">움짤 생성에 실패 했습니다\n다시 시도해주세요</string>
    <string name="inaccessible_frame_list">잘못된 frame list 접근</string>
    <string name="err_dont_load_frame">프레임을 불러올 수 없습니다.</string>
    <string name="err_modifying">수정 사항을 적용한 후 다시 시도해 주세요</string>
    <string name="err_loading_image_content">서버에서 이미지를 가져오는데 실패했습니다. 다시 시도해 주세요.</string>
    <string name="err_loading_image_title">서버 연결 실패</string>
    <string name="err_upload_gif_title">업로드 실패</string>
    <string name="err_upload_gif_content">움짤 업로드를 실패 했습니다\n다시 시도해 주세요</string>
    <string name="err_no_image_title">이미지 없음</string>
    <string name="err_no_image_content">만들고있는 이미지가 없습니다</string>
    <string name="err_add_file_title">프레임 추가 실패</string>
    <string name="err_add_file_content">파일 형식을 알 수 없습니다</string>
    <string name="err_add_frame_content">최대 10개의 프레임만 추가 가능합니다</string>
    <string name="err_add_frames_title">프레임 개수 제한</string>
    <string name="err_add_frames_content">프레임의 일부를 추가할 수 없습니다 \n(최대 10개)</string>
    <string name="err_history_rollback_title">되돌리기 실패</string>
    <string name="err_history_rollback_content">원본이미지입니다</string>
    <string name="err_remove_file">파일이 삭제에 실패 했습니다 다시 시도해 주세요.</string>


    <!--dialog-->
    <string name="select_image" translatable="false">Select Image</string>
    <string name="select_video" translatable="false">Select Video</string>
    <string name="splash_image" translatable="false">logo_image</string>
    <string name="share_gif" translatable="false">Share Gif</string>
    <string name="adding_frames">프레임 불러오는 중</string>
    <string name="saving_gif">열씨미 움짤 찌고 있습니다</string>
    <string name="stop_making">보정 취소</string>
    <string name="stop_making_content">보정 내역을 버리고 프레임 추가화면으로 이동합니다. \n계속 하시겠습니까?</string>
    <string name="exit">종료</string>
    <string name="exit_content">어플을 종료합니다 \n계속 하시겠습니까?</string>
    <string name="saved_gif">저장되었습니다.</string>
    <string name="modifying">수정 중</string>
    <string name="remove">삭제</string>
    <string name="upload_gif_loading">업로드하는 중</string>
    <string name="upload_gif_title">업로드</string>
    <string name="upload_gif_content">움짤 업로드를 완료 했습니다</string>
    <string name="download_gif_loading">다운로드하는 중</string>
    <string name="download_gif_title">다운로드</string>
    <string name="download_gif_content">움짤 다운로드를 완료 했습니다</string>
    <string name="naming_gif_hint">움짤의 이름을 입력하세요</string>
    <string name="check_network">인터넷 연결 확인</string>
    <string name="non_network">인터넷에 연결되어 있지 않습니다</string>
    <string name="warning_mobile_network">데이터 네트워크를 사용 중 입니다\n계속 하시겠습니까?</string>
    <string name="continue_work">계속</string>
    <string name="cancel">취소</string>
    <string name="remove_file">파일 삭제</string>
    <string name="remove_file_content">파일을 삭제합니다.\n계속 하시겠습니까?</string>
    <string name="remove_file_result">파일이 삭제되었습니다.</string>
    <string name="cancel_favorite">해제</string>
    <string name="cancel_favorite_title">담아가기 해제</string>
    <string name="cancel_favorite_content">담은 이미지를 저장소에서 제거합니다.\n계속 하시겠습니까?</string>
    <string name="download_favorite_content">선택한 이미지를 다운로드합니다.\n계속 하시겠습니까?</string>

    <!--quality-->
    <string name="quality_super_high">초고화질</string>
    <string name="quality_high">고화질</string>
    <string name="quality_medium">중화질</string>
    <string name="quality_low">저화질</string>

    <!--frame adder-->
    <string name="add_from_image_label">사진 추가</string>
    <string name="add_from_gif_label">움짤 추가</string>
    <string name="add_from_video_label">영상 추가</string>
    <string name="add_from_image">이미지에서 추가</string>
    <string name="add_from_gif">움짤에서 추가</string>
    <string name="add_from_video">비디오에서 추가</string>
    <string name="add_from_camera">사진 촬영</string>
    <string name="add_from_image_detail">*  외부앱에서 이미지를 추가합니다</string>
    <string name="add_from_gif_detail">*  외부앱에서 움짤을 추가합니다</string>
    <string name="add_from_video_detail">*  비디오의 일부를 캡쳐합니다</string>
    <string name="add_from_camera_detail">*  사진을 찍어 갤러리에 추가합니다</string>

    <!--correct-->
    <string name="fps" translatable="false">Fps</string>
    <string name="brightness">밝기</string>
    <string name="contrast">대비</string>
    <string name="gamma">감마</string>
    <string name="apply">적용</string>
    <string name="reverse">역방향</string>
    <string name="complete">완료</string>

    <!--video capture-->
    <string name="video_capture_label">캡쳐 지점 설정</string>
    <string name="frame_delay">프레임 딜레이(ms)</string>
    <string name="count">캡쳐 수</string>

    <!--share-->
    <string name="firebase_bucket" translatable="false">gs://emoge-50942.appspot.com</string>
    <string name="firebase_directory" translatable="false">Emoge</string>
    <string name="app_package_kakao" translatable="false">com.kakao.talk</string>
    <string name="app_package_google_drive" translatable="false">com.google.android.apps.docs</string>
    <string name="app_package_facebook" translatable="false">com.facebook.katana</string>
    <string name="share_kakao">카카오톡으로 공유</string>
    <string name="share_gogle_drive">구글드라이브로 공유</string>
    <string name="share_facebook">페이스북으로 공유</string>
    <string name="share_others">다른 앱으로 공유</string>
    <string name="server_image">서버 이미지</string>
    <string name="server_category_store">저장소</string>
    <string name="server_category_humor">유머</string>
    <string name="server_category_healing">힐링</string>
    <string name="server_category_human">인물</string>
    <string name="remove_favorite">담아가기 해제 되었습니다.</string>
    <string name="add_favorite">움짤을 담았습니다</string>

    <!--navigation-->
    <string name="navigation_open">이동화면 열림</string>
    <string name="navigation_close">이동화면 닫힘</string>
    <string name="navigation_server">저장소로</string>
    <string name="navigation_making_gif">움짤 생성</string>
    <string name="navigation_license">license</string>
    <string name="navigation_help">도움말</string>

    <!--showcase-->
    <string name="showcase_making_gif">Click해서 움짤을 만들어보세요</string>
    <string name="showcase_add_frame">이미지를 선택하면\n프레임으로 등록됩니다</string>
    <string name="showcase_show_correct">모두 추가했으면\n보정을 시작하세요</string>
    <string name="showcase_correcting">보정을 해보세요!\n(속도/밝기/대비/감마/필터)</string>
    <string name="showcase_history">언제든지\n보정 전으로 돌아갈 수 있어요\n마음껏 보정하세요</string>
    <string name="showcase_save_gif">완성했다면 저장을 잊지마세요</string>

    <!--other-->
    <string name="save">움짤 저장</string>
    <string name="menu_add_image">이미지 추가 메뉴</string>
    <string name="menu_correct_image">보정 메뉴</string>
    <string name="back_button">뒤로가기</string>
    <string name="next">다음</string>
    <string name="history">history</string>
    <string name="hide">숨기기</string>
    <string name="back">back</string>
    <string name="best_image">이 시각 최고의 움짤</string>
    <string name="frame_gif_label">GIF</string>
    <string name="share">공유하기</string>
    <string name="rank_number" translatable="false">%d 위</string>
    <string name="rank_out">순위 외</string>
    <string name="my_gallery">My Gallery</string>
    <string name="history_origin">원본</string>
    <string name="no_image">이미지가 없습니다</string>
    <string name="preview">미리보기화면</string>
</resources>
