<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolbar"
    android:layout_width="0dp"
    android:layout_height="@dimen/toolbar_height"
    android:background="@drawable/toolbar_bg"
    app:contentInsetEnd="0dp"
    app:contentInsetLeft="0dp"
    app:contentInsetRight="0dp"
    app:contentInsetStart="0dp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/toolbar_share"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/unit_dimen"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/share_gif"
            android:padding="@dimen/half_unit_dimen"
            android:src="@android:drawable/ic_menu_share"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/toolbar_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:padding="@dimen/unit_dimen"
            android:scaleType="centerInside"
            android:src="@drawable/app_name"
            android:transitionName="@string/splash_image"
            android:contentDescription="@string/app_name" />

        <ImageButton
            android:id="@+id/toolbar_save"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/unit_dimen"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:padding="@dimen/half_unit_dimen"
            android:src="@android:drawable/ic_menu_save"
            android:visibility="gone"
            android:contentDescription="@string/save" />

    </LinearLayout>
</android.support.v7.widget.Toolbar>