<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_container"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="wrap_content"
    android:padding="@dimen/half_unit_dimen">

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/dialog_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/dialog_quality"
        android:layout_marginTop="@dimen/half_unit_dimen"
        android:entries="@array/server_category" />

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/dialog_quality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/dialog_category"
        android:entries="@array/image_quality" />

    <ImageView
        android:id="@+id/dialog_save_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignBottom="@id/dialog_quality"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@id/dialog_category"
        android:layout_toStartOf="@id/dialog_quality"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/img_save_image" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/dialog_editor_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_quality"
        android:layout_marginBottom="@dimen/half_unit_dimen"
        android:layout_marginTop="@dimen/unit_dimen"
        app:hintTextAppearance="@style/EditTextHint">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/dialog_editor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/naming_gif_hint"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:lines="1"
            android:maxLength="@integer/max_gif_name"
            android:maxLines="1"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/dialog_bt_cancel"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/dialog_editor_layout"
        android:layout_marginStart="@dimen/icon_size"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:scaleType="fitCenter"
        android:text="@string/cancel"
        android:textColor="@color/colorCancel" />

    <Button
        android:id="@+id/dialog_bt_save"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/dialog_editor_layout"
        android:layout_marginEnd="@dimen/icon_size"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:scaleType="fitCenter"
        android:text="@string/save"
        android:textColor="@color/colorConfirm" />


</RelativeLayout>