<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_container"
    android:layout_width="@dimen/navigation_width"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@color/colorPrimaryDark"
    android:choiceMode="singleChoice"
    android:divider="@android:color/transparent"
    android:dividerHeight="0dp"
    android:orientation="vertical"
    android:paddingBottom="@dimen/unit_dimen"
    android:paddingEnd="@dimen/unit_dimen"
    android:paddingStart="@dimen/unit_dimen"
    android:paddingTop="@dimen/toolbar_height">


    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/navigation_server_icon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:padding="@dimen/half_unit_dimen"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_upload"
        app:layout_constraintBottom_toBottomOf="@+id/navigation_server"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@+id/navigation_server" />

    <Button
        android:id="@+id/navigation_server"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/unit_dimen"
        android:background="@android:color/transparent"
        android:text="@string/navigation_server"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/guideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/navigation_making_gif_icon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:padding="@dimen/half_unit_dimen"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="@+id/navigation_making_gif"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@+id/navigation_making_gif" />

    <Button
        android:id="@+id/navigation_making_gif"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/unit_dimen"
        android:background="@android:color/transparent"
        android:text="@string/navigation_making_gif"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/guideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/navigation_server" />

    <ImageView
        android:id="@+id/navigation_license_icon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:padding="@dimen/half_unit_dimen"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_license"
        app:layout_constraintBottom_toBottomOf="@+id/navigation_license"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@+id/navigation_license" />

    <Button
        android:id="@+id/navigation_license"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/unit_dimen"
        android:background="@android:color/transparent"
        android:text="@string/navigation_license"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/guideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/navigation_making_gif" />

    <ImageView
        android:id="@+id/navigation_help_icon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:padding="@dimen/half_unit_dimen"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_help"
        app:layout_constraintBottom_toBottomOf="@+id/navigation_help"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@+id/navigation_help" />

    <Button
        android:id="@+id/navigation_help"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/unit_dimen"
        android:background="@android:color/transparent"
        android:text="@string/navigation_help"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/guideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/navigation_license" />


    <ImageView
        android:id="@+id/navigation_exit_icon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:padding="@dimen/half_unit_dimen"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_exit"
        app:layout_constraintBottom_toBottomOf="@+id/navigation_exit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@+id/navigation_exit" />

    <Button
        android:id="@+id/navigation_exit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/exit"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/guideline"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>