<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/video_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:fragment="com.emoge.app.emoge.ui.VideoActivity">

    <RelativeLayout
        android:id="@+id/main_gallery_video_window"
        android:layout_width="0dp"
        android:layout_height="@dimen/toolbar_height"
        android:background="@drawable/toolbar_gallery_bg"
        android:elevation="@dimen/half_unit_dimen"
        android:paddingEnd="@dimen/half_unit_dimen"
        android:paddingStart="@dimen/half_unit_dimen"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/main_gallery_video_back"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_button"
            android:padding="@dimen/half_unit_dimen"
            android:src="@drawable/ic_back_arrow_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/video_capture_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/primary_text_dark"
            android:textStyle="bold" />

    </RelativeLayout>

    <com.halilibo.bettervideoplayer.BetterVideoPlayer
        android:id="@+id/video_video"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorBackground"
        app:bvp_autoPlay="true"
        app:layout_constraintBottom_toTopOf="@+id/video_capture_window"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_gallery_video_window" />

    <!--capture count seek bar-->
    <android.support.constraint.Guideline
        android:id="@+id/guideline_capture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />

    <LinearLayout
        android:id="@+id/video_capture_window"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPalette"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/guideline_capture">

        <TextView
            android:id="@+id/video_count_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/unit_dimen"
            android:text="@string/count"
            android:textAppearance="@android:style/TextAppearance.Holo.Small"
            android:textColor="@android:color/primary_text_dark" />

        <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
            android:id="@+id/video_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dsb_indicatorColor="@color/colorAccent"
            app:dsb_indicatorElevation="0dp"
            app:dsb_max="10"
            app:dsb_min="1"
            app:dsb_progressColor="@color/colorProgress"
            app:dsb_value="5" />


        <!--fps seek bar-->
        <TextView
            android:id="@+id/video_fps_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/unit_dimen"
            android:text="@string/frame_delay"
            android:textAppearance="@android:style/TextAppearance.Holo.Small"
            android:textColor="@android:color/primary_text_dark" />

        <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
            android:id="@+id/video_fps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dsb_indicatorColor="@color/colorAccent"
            app:dsb_indicatorElevation="0dp"
            app:dsb_max="2000"
            app:dsb_min="100"
            app:dsb_progressColor="@color/colorProgress"
            app:dsb_value="500" />

    </LinearLayout>


    <!--confirm button-->
    <ImageButton
        android:id="@+id/video_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:background="@color/colorAccent"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:src="@drawable/ic_capture"
        app:layout_constraintBottom_toBottomOf="@id/video_capture_window"
        app:layout_constraintLeft_toLeftOf="@id/guideline_capture"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/video_capture_window" />

</android.support.constraint.ConstraintLayout>
