<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_palette_window"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:visibility="gone"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="@+id/guideline1">

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <!--Preview-->
    <ImageView
        android:id="@+id/main_preview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:padding="@dimen/unit_dimen"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--history-->
    <android.support.v7.widget.RecyclerView
        android:id="@+id/main_history"
        android:layout_width="@dimen/history_width"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/tiny_dimen"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/main_bt_history"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/main_bt_history"
        android:layout_width="@dimen/history_toggle_button"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/tiny_dimen"
        android:layout_marginStart="@dimen/tiny_dimen"
        android:background="@color/colorBoomDim"
        android:gravity="center"
        android:padding="@dimen/small_dimen"
        android:text="@string/history"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@id/guideline2"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/main_bt_history_back"
        android:layout_width="@dimen/history_toggle_button"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/tiny_dimen"
        android:layout_marginStart="@dimen/small_dimen"
        android:background="@color/colorBoomDim"
        android:gravity="center"
        android:padding="@dimen/small_dimen"
        android:text="@string/back"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@id/guideline2"
        app:layout_constraintLeft_toRightOf="@id/main_bt_history" />


    <!--FPS Viewer-->
    <TextView
        android:id="@+id/main_fps_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Palette-->
    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/toolbar_gallery_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2">

        <android.support.design.widget.TabLayout
            android:id="@+id/main_palette_tab"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/main_bt_correction"
            app:layout_constraintTop_toTopOf="parent"
            app:tabSelectedTextColor="@android:color/white" />

        <!--Menu Buttons-->
        <com.nightonke.boommenu.BoomMenuButton
            android:id="@+id/main_bt_correction"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="@dimen/half_unit_dimen"
            app:bmb_buttonEnum="textOutsideCircle"
            app:bmb_buttonPlaceEnum="buttonPlace_sc_7_4"
            app:bmb_buttonRadius="@dimen/boombutton_size"
            app:bmb_dimColor="@color/colorBoomDim"
            app:bmb_dotRadius="0dp"
            app:bmb_normalColor="@color/colorPaletteLabel"
            app:bmb_piecePlaceEnum="piecePlace_dot_7_4"
            app:layout_constraintBottom_toBottomOf="@id/main_palette_tab"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/main_palette_tab">

            <ImageView
                android:layout_width="@dimen/boombutton_image_size"
                android:layout_height="@dimen/boombutton_image_size"
                android:layout_gravity="center"
                android:background="@color/colorPaletteLabel"
                android:contentDescription="@string/menu_correct_image"
                android:src="@drawable/ic_correct" />
        </com.nightonke.boommenu.BoomMenuButton>

        <android.support.v7.widget.ContentFrameLayout
            android:id="@+id/main_palette_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_palette_tab">

        </android.support.v7.widget.ContentFrameLayout>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>